Edit signup component to fix img alignment

--- a/src/app/firebasecomponents/sign-up/sign-up.component.css
+++ b/src/app/firebasecomponents/sign-up/sign-up.component.css
@@ -1,8 +1,8 @@
 .displayTable {
+    position: relative;
     display: table;
     width: 100%;
-    height: 100%;
-    
+    height: 100%;  
 }
   
 .displayTableCell {
@@ -16,7 +16,7 @@ h3 {
     text-align: center;
     font-size: 22px;
     margin: 0 0 20px;
-  }
+}
   
 .authBlock {
     margin: 85px auto;
@@ -110,6 +110,20 @@ input:-moz-placeholder {
     width: 100%;
     height: 1px;
     background: #e2e2e2;
+}
+
+empty-div {
+    text-align: center;
+    margin: -12px 0 15px 0;
+    float: left;
+    width: 100%;
+}
+
+.empty-div span {
+    color: white;
+    font-size: 14px;
+    display: inline-block;
+    padding-top: 20px;
 }
 
 .redirectToLogin {
